--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-standard": "^6.1.0",
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.27.2",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
