--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "less-loader": "^8.0.0",
     "lodash": "^4.17.21",
     "postcss-pxtorem": "^6.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuex-persistedstate": "^3.2.1"
   }
 }
